--- a/telemetry/conf.d/nginx.conf
+++ b/telemetry/conf.d/nginx.conf
@@ -19,4 +19,10 @@ server {
   }
 }
 
-
+server {
+  listen 8082;
+  location / {
+    # octet-stream content-type
+    content_by_lua_file /lua/hmac.lua;
+  }
+}
