--- a/telemetry/conf.d/nginx.conf
+++ b/telemetry/conf.d/nginx.conf
@@ -26,3 +26,10 @@ server {
     content_by_lua_file /lua/hmac.lua;
   }
 }
+
+server {
+	listen 8083;
+	location / {
+		content_by_lua_file /lua/mysql.lua;
+	}
+}
