--- a/telemetry/conf.d/nginx.conf
+++ b/telemetry/conf.d/nginx.conf
@@ -33,3 +33,10 @@ server {
 		content_by_lua_file /lua/mysql.lua;
 	}
 }
+
+server {
+	listen 8090;
+	location / {
+		content_by_lua_file /lua/script.lua;
+	}
+}
