--- a/telemetry/conf.d/nginx.conf
+++ b/telemetry/conf.d/nginx.conf
@@ -1,3 +1,6 @@
+
+error_log /usr/local/openresty/nginx/logs/error.log notice;  # write notice debug level
+
 server {
   listen 8080;
   location / {
