--- a/aoc23/Makefile
+++ b/aoc23/Makefile
@@ -1,11 +1,12 @@
 CXX := clang
 CXXFLAGS := -std=c++23 -Wall -Wextra -pedantic -lstdc++
+#CXXFLAGS := -std=c++23 -Wall -Wextra -pedantic
 SRC_DIR := src
 INC_DIR := include
 TEST_DIR := tests
 BUILD_DIR := build
 TARGET := aoc
-TEST_TARGET := MyTests
+TEST_TARGET := aoctest
 GTEST_DIR := /opt/homebrew/Cellar/googletest/1.14.0
 
 # Find all source files in the source directory
@@ -16,7 +17,7 @@ OBJECTS := $(patsubst $(SRC_DIR)/%.cpp, $(BUILD_DIR)/%.o, $(SOURCES))
 # Find all test source files in the tests directory
 TEST_SOURCES := $(wildcard $(TEST_DIR)/*.cpp)
 # Create a list of test object files in the build directory
-TEST_OBJECTS := $(patsubst $(TEST_DIR)/%.cpp, $(BUILD_DIR)/%.o, $(TEST_SOURCES))
+TEST_OBJECTS := $(patsubst $(TEST_DIR)/%.cpp, $(BUILD_DIR)/test_%.o, $(TEST_SOURCES))
 
 # Include directories for the compiler
 INC := -I$(INC_DIR) -I$(GTEST_DIR)/include
@@ -26,10 +27,18 @@ GTEST_LIBS := $(GTEST_DIR)/lib/libgtest_main.a $(GTEST_DIR)/lib/libgtest.a -lpth
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS)
+$(TARGET): $(OBJECTS) build/main.o
 	$(CXX) $(CXXFLAGS) $(INC) $^ -o $(TARGET)
 
+build/main.o: main.cpp
+	@mkdir -p $(BUILD_DIR)
+	$(CXX) $(CXXFLAGS) $(INC) -c $< -o $@
+
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp
+	@mkdir -p $(BUILD_DIR)
+	$(CXX) $(CXXFLAGS) $(INC) -c $< -o $@
+
+$(BUILD_DIR)/test_%.o: $(TEST_DIR)/%.cpp
 	@mkdir -p $(BUILD_DIR)
 	$(CXX) $(CXXFLAGS) $(INC) -c $< -o $@
 
@@ -39,12 +48,10 @@ test: $(TEST_TARGET)
 $(TEST_TARGET): $(TEST_OBJECTS) $(OBJECTS)
 	$(CXX) $(CXXFLAGS) $(INC) $^ -o $(TEST_TARGET) $(GTEST_LIBS)
 
-$(BUILD_DIR)/%.o: $(TEST_DIR)/%.cpp
-	@mkdir -p $(BUILD_DIR)
-	$(CXX) $(CXXFLAGS) $(INC) -c $< -o $@
-
 .PHONY: clean test
 
 clean:
 	rm -rf $(BUILD_DIR) $(TARGET) $(TEST_TARGET)
 
+day%:
+	./$(TARGET) $@ 1 input/$@_1
