--- a/web/readium-annotator/package.json
+++ b/web/readium-annotator/package.json
@@ -6,14 +6,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "build": "npm run tsc && npm run esbuild",
-    "esbuild": "esbuild build/index.mjs --bundle --format=esm --target=esnext --outfile=build/index.js",
-    "serve": "python3 -m http.server --protocol HTTP/1.1"
+    "esbuild": "esbuild build/demo/index.mjs --bundle --format=esm --target=esnext --outfile=build/index.js",
+    "serve": "python3 -m http.server --protocol HTTP/1.1",
+    "publish": "surge . accidental-shame.surge.sh",
+    "dev": "concurrently \"tsc --watch\" \"esbuild --cache\" \"npm run serve\"",
+    "clean": "rm -rf build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "esbuild": "0.24.0",
     "typescript": "^5.6.3"
   },
