--- a/web/readium-annotator/tsconfig.json
+++ b/web/readium-annotator/tsconfig.json
@@ -108,5 +108,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "exclude": ["node_modules", "build"],
-  "include": ["src", "test", "demo"]
+  "include": ["src", "test", "demo", "vendor"]
 }
